force-app/main/default/objects/QB_Line_Item__c/QB_Line_Item__c.object-meta.xml
<CustomObject>
    <label>QB Line Item</label>
    <nameField>
        <label>QB Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>