force-app/main/default/objects/QB_Line_Item__c/fields/Inventory_Site__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Site__c</fullName>
    <label>Inventory Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>