force-app/main/default/objects/QB_Line_Item__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Master of the line item</description>
    <label>Invoice</label>
    <referenceTo>QB_Invoice__c</referenceTo>
    <relationshipLabel>QB Line Items</relationshipLabel>
    <relationshipName>QB_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>