force-app/main/default/objects/QB_Line_Item__c/fields/Item_Ref__c.field-meta.xml
<CustomField>
    <fullName>Item_Ref__c</fullName>
    <description>Product/Service reference Id</description>
    <label>Item Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>