force-app/main/default/objects/QB_Line_Item__c/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <description>Name of Product/Service</description>
    <label>Product/Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>