force-app/main/default/objects/QB_Line_Item__c/fields/QB_Item__c.field-meta.xml
<CustomField>
    <fullName>QB_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuickBooks Item</label>
    <referenceTo>breadwinner_qbo__BW_QB_Item__c</referenceTo>
    <relationshipLabel>QB Line Items</relationshipLabel>
    <relationshipName>QB_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>