force-app/main/default/objects/QB_Line_Item__c/fields/Quantity_7_Decimals__c.field-meta.xml
<CustomField>
    <fullName>Quantity_7_Decimals__c</fullName>
    <label>Quantity (7 Decimals)</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>