force-app/main/default/objects/QB_Line_Item__c/fields/Rate_7_Decimals__c.field-meta.xml
<CustomField>
    <fullName>Rate_7_Decimals__c</fullName>
    <label>Rate (7 Decimals)</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>