force-app/main/default/objects/QB_Line_Item__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Tax applied?</description>
    <label>Tax</label>
    <type>Checkbox</type>
</CustomField>