force-app/main/default/objects/QB_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product_Service__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>